# fem-cut-cell-3D

./: LICENSE  README.md
examples/: PoissonProblem_stationary_final.cc
examples/poisson_problem/: CMakeLists.txt  poisson_problem.cc  poisson_problem_2.cc
include/: CutCell_Integration_3D.cpp  CutCell_Integration_3D.h  NewCell_3D.cpp  NewCell_3D.h  NewFace_3D.cpp  NewFace_3D.h  NewMesh_3D.cpp  NewMesh_3D.h  Polynomials3D.h  Write_VTK.cpp  Write_VTK.h  polymul.h
results/: solution_new-.vtk  solution_new-ref-3.vtk
results/poisson_problem/: interpolated_solution-ref-3.vtk  solution_new-ref-3.vtk  solution_new-ref-4.vtk  solution_new-ref-5.vtk
